# pypkg

./: .gitignore  Makefile  Pipfile  README.md  md2html.sh  memo.md  new.sh  setup.cfg
.circleci/: config.yml
docs/: history.html  history.md
docs/source/: conf.py  modules.rst  pkg.rst
src/pkg/: main.py
tests/: test_main.py
