[metadata]
name = pkg
version = '0.1.0'
auther = tomowarkar
auther_email =
description = description
description-file = file: README.md
url = https://tomowarkar.github.io/blog/
license = MIT
license_file = LICENSE

[options]
install_requires=
package_dir =
=src
packages = find:

[options.packages.find]
where=src

[flake8]
show_source = True
max-line-length=88
